# agentic-satellite-data

./: .gitignore  .mcp.json  DEMO_WORKFLOW.md  EXERCISES.md  Makefile  README.md  lecture_plan.md  pyproject.toml  requirements.txt
agent/: loop.py  mock.py  rag.py  scene.py  schemas.py  tools.py  types.py
data/: download_data.py  fetch_sentinel2.py  generate_scenes.py
data/mock_responses/: scene_a.json
data/rag_documents/: 2018_monitoring_crop_evapotranspiration_crop_coeffs_almond_remote_sensing.md  2022_remote_sensing_alfalfa_review.md  2024_remote_sensing_applications_almond_orchards_review.md  2025_assessment_of_different_remote_sensing_techniques_cwsi_almond_trees.md  almonds_org_irrigation_packet.md  cv_water_district_bulletin_july2024.md  gemini_alfalfa_overview.md  irrigating_alfalfa_some_guidelines.md  madera_county_crop_report_2024.md  sentinel2_spectral_indices_reference.md  ucce_almond_irrigation_guide.md
data/scenes/: central_valley_bands.npy  central_valley_baseline_bands.npy  central_valley_metadata.json  scene_a_bands.npy  scene_a_baseline_bands.npy  scene_a_metadata.json  scene_b_bands.npy  scene_b_metadata.json
mcp_servers/: weather.py
notebooks/: 00_data_exploration.ipynb  01_tools.ipynb  02_agent_loop.ipynb  03_failure_modes.ipynb  04_visualizations.ipynb  build_nb02.py  build_nb03.py
scripts/: download_nexrad.py  plot_map_from_coords.py
slides/: lecture.md  notes.md
tests/: conftest.py  test_generate_scenes.py  test_loop.py  test_mock.py  test_scene.py  test_schemas.py  test_tools.py  test_types.py
(+15 files in other folders)
