[project]
name = "agentic-satellite-data"
version = "0.1.0"
description = "demonstrating agentic development patterns on satellite data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.84.0",
    "cartopy>=0.25.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "pyqt6>=6.10.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "sentinelsat>=1.2.1",
]
